--- a/Leaflet/basemap_leaflet.html
+++ b/Leaflet/basemap_leaflet.html
@@ -43,7 +43,7 @@
  
 <body>
     <div class="about">
-      <h2>LIST Topographic Basemap (<a href="http://openlayers.org/two/">Openlayers Version 2</a>)</h2>
+      <h2>LIST Topographic Basemap (<a href="http://leafletjs.com/">Leaflet</a>)</h2>
       Web Service Endpoint: <a href="http://services.thelist.tas.gov.au/arcgis/rest/services/Basemaps/Topographic/ImageServer">http://services.thelist.tas.gov.au/arcgis/rest/services/Basemaps/Topographic/ImageServer</a><br><br>
     </div>
     <div id="map"></div>
